[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pk-board"
version = "0.1.0"
description = "pk — Personal Kanban for the Terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "itzceekay" },
]
keywords = ["kanban", "terminal", "cli", "productivity", "todo", "task-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
pk = "pk_board.cli:main"

[project.urls]
Homepage = "https://github.com/itzceekay/pk-board"
Repository = "https://github.com/itzceekay/pk-board"
Issues = "https://github.com/itzceekay/pk-board/issues"
